<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardview_surah"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/no_surah"
            android:text="@string/no_surah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/nama_surah"
            android:text="@string/nama_surah"
            android:textAlignment="viewEnd"
            app:layout_constraintStart_toEndOf="@+id/no_surah"
            android:layout_marginStart="16dp"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/arti_surah"
            android:text="@string/arti_surah"
            app:layout_constraintStart_toStartOf="@+id/nama_surah"
            app:layout_constraintTop_toBottomOf="@+id/nama_surah"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/audio_surah"
            android:text="@string/audio_surah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible">
        </TextView>

        <TextView
            android:id="@+id/description_surah"
            android:text="@string/description_surah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible">
        </TextView>

        <TextView
            android:id="@+id/tipe_surah"
            android:text="@string/tipe_surah"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible">
        </TextView>

        <TextView
            android:id="@+id/jumlah_ayat"
            android:text="@string/jumlah_ayat"
            android:textSize="18sp"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/label_ayat"
            android:layout_height="0dp"
            android:layout_width="wrap_content"
            android:paddingEnd="4sp">
        </TextView>

        <TextView
            android:id="@+id/label_ayat"
            android:text="@string/label_ayat"
            android:textSize="18sp"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="0dp"
            android:layout_width="wrap_content">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>