<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <WebView
        android:id="@+id/webview_audio"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        >
    </WebView>

    <TextView
        android:id="@+id/nama_surah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/webview_audio"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/nama_surah"
        android:layout_margin="16dp"
        android:textSize="18sp"
        >
    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_info"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@+id/nama_surah"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/label_no_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_no_surah">
                    </TextView>

                    <TextView
                        android:id="@+id/label_arti_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_arti_surah">
                    </TextView>

                    <TextView
                        android:id="@+id/label_jumlah_ayat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_jumlah_ayat">
                    </TextView>

                    <TextView
                        android:id="@+id/label_tipe_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_tipe_surah">
                    </TextView>

                    <TextView
                        android:id="@+id/label_deskripsi_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_deskripsi_surah">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/label_sama_dengan">
                    </TextView>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/label_sama_dengan">
                    </TextView>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/label_sama_dengan">
                    </TextView>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/label_sama_dengan">
                    </TextView>

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/label_sama_dengan">
                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.95"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/no_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_surah">
                    </TextView>

                    <TextView
                        android:id="@+id/arti_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/arti_surah">
                    </TextView>

                    <TextView
                        android:id="@+id/jumlah_ayat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jumlah_ayat">
                    </TextView>

                    <TextView
                        android:id="@+id/tipe_surah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tipe_surah">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/deskripsi_surah"
                app:layout_constraintTop_toBottomOf="@+id/linear_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deksripsi_surah">
            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>